--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -9,4 +9,21 @@
     <string name="type">类型</string>
     <string name="verification_code">验证码</string>
     <string name="not_set">未设置</string>
+    <string name="successfully">密钥添加成功</string>
+    <string name="copy_successfully">验证码已复制到剪贴板</string>
+    <string name="copy_verification_code">复制验证码</string>
+    <string name="view_details">查看详情</string>
+    <string name="delete_token">删除令牌</string>
+    <string name="token_details">令牌详情</string>
+    <string name="copy_key">复制密钥</string>
+    <string name="key">密钥</string>
+    <string name="copy_key_successfully">密钥已复制到剪贴板</string>
+    <string name="delete_token_title">删除令牌</string>
+    <string name="delete_token_message">确定要删除 %1$s 吗？此操作不可撤销。</string>
+    <string name="delete">删除</string>
+    <string name="no_tokens_message">暂无令牌，点击右下角按钮添加</string>
+    <string name="token_deleted">令牌已删除</string>
+    <string name="add_verify_token">添加验证令牌</string>
+    <string name="enter_account_name">请输入账户名</string>
+    <string name="enter_secret_key">请输入密钥</string>
 </resources>
