--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -26,4 +26,5 @@
     <string name="add_verify_token">添加验证令牌</string>
     <string name="enter_account_name">请输入账户名</string>
     <string name="enter_secret_key">请输入密钥</string>
+    <string name="qq_group">QQ 交流群</string>
 </resources>
