--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="enter_secret_key">Please enter secret key</string>
     <string name="telegram_group">Telegram Group</string>
     <string name="qq_group">QQ Group</string>
+    <string name="new_version">New Version</string>
 </resources>
