--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -23,7 +23,18 @@
     <string name="delete">삭제</string>
     <string name="no_tokens_message">토큰이 없습니다. 오른쪽 하단 버튼을 눌러 추가하세요.</string>
     <string name="token_deleted">토큰이 삭제됨</string>
-    <string name="add_verify_token">인증 토큰 추가</string>
+    <string name="add_verify_key">인증 토큰 추가</string>
     <string name="enter_account_name">계정 이름을 입력하세요</string>
     <string name="enter_secret_key">비밀 키를 입력하세요</string>
+    <string name="enter_setting_key">설정 키 입력</string>
+    <string name="scan_qr_code">QR 코드 스캔</string>
+    <string name="import_qm">Qm Authenticator 가져오기</string>
+    <string name="adding_method">추가 방법</string>
+    <string name="export_failed">내보내기 실패</string>
+    <string name="failed_generate_qr">QR 코드 생성 실패</string>
+    <string name="failed_generate_verification_code">인증 코드 생성 실패</string>
+    <string name="invalid_qr_code">잘못된 QR 코드</string>
+    <string name="error_occurred_while_processing_qr_code">QR 코드 처리 중 오류 발생</string>
+    <string name="scan_failed">스캔 실패</string>
+    <string name="permissions">QR 코드 스캔을 위해 카메라 권한이 필요합니다</string>
 </resources>
