--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,10 +23,24 @@
     <string name="delete">Delete</string>
     <string name="no_tokens_message">No tokens yet, tap the button in the bottom right corner to add</string>
     <string name="token_deleted">Token deleted</string>
-    <string name="add_verify_token">Add Verification Token</string>
+    <string name="add_verify_key">Add Verification Key</string>
     <string name="enter_account_name">Please enter account name</string>
     <string name="enter_secret_key">Please enter secret key</string>
     <string name="telegram_group">Telegram Group</string>
     <string name="qq_group">QQ Group</string>
     <string name="new_version">New Version</string>
+    <string name="update">Update</string>
+    <string name="code_error_placeholder">Error</string>
+    <string name="enter_setting_key">Enter the setting key</string>
+    <string name="scan_qr_code">Scan QR code</string>
+    <string name="import_qm">Import Qm Authenticator</string>
+    <string name="adding_method">Adding Method</string>
+    <string name="export_failed">Export Failed</string>
+    <string name="failed_generate_qr">Failed to generate QR code</string>
+    <string name="failed_generate_verification_code">Failed to generate verification code</string>
+    <string name="invalid_qr_code">Invalid QR code</string>
+    <string name="error_occurred_while_processing_qr_code">An error occurred while processing the QR code</string>
+    <string name="scan_failed">Scanning failed</string>
+    <string name="permissions">Camera permissions are required to scan QR codes</string>
+    <string name="export_tokens">Export Tokens</string>
 </resources>
